[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/enemy/Enemy1.png" type="Texture" id=1]
[ext_resource path="res://assets/enemy/Enemy2.png" type="Texture" id=2]
[ext_resource path="res://assets/enemy/Enemy3.png" type="Texture" id=3]
[ext_resource path="res://themes/progress_bar_theme.tres" type="Theme" id=4]
[ext_resource path="res://EnemyScript.gd" type="Script" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=4]
radius = 7.0
height = 12.0

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.815686, 0.34902, 0.34902, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="CircleShape2D" id=5]
radius = 30.0

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "walk"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -2, 1 )
shape = SubResource( 4 )

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = -14.0
margin_top = 23.0
margin_right = 256.0
margin_bottom = 63.0
rect_scale = Vector2( 0.1, 0.1 )
theme = ExtResource( 4 )
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
max_value = 109.0
step = 10.0
value = 109.0
percent_visible = false

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -2, 1 )
shape = SubResource( 5 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
